fixed layout shift, font still too small

--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,13 @@
   --text-color: var(--tertiary-color-50);
   /* White */
   --font-family: 'Arial', sans-serif;
-  --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
-  --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-  --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
-  --font-size-l: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
-  --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
-  --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-  --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+  --font-size-sm: clamp(0.8rem, 0.1955vw + 0.76rem, 0.89rem);
+  --font-size-base: clamp(1rem, 0.391vw + 0.91rem, 1.19rem);
+  --font-size-md: clamp(1.25rem, 0.7015vw + 1.1rem, 1.58rem);
+  --font-size-l: clamp(1.56rem, 1.15vw + 1.31rem, 2.11rem);
+  --font-size-xl: clamp(1.95rem, 1.794vw + 1.56rem, 2.81rem);
+  --font-size-xxl: clamp(2.44rem, 2.737vw + 1.85rem, 3.75rem);
+  --font-size-xxxl: clamp(3.05rem, 4.071vw + 2.17rem, 5rem);
 }
 
 body {
@@ -76,7 +76,7 @@ a:hover {
   color: white;
   border-radius: 1rem;
   border-top-left-radius: 0rem;
-  margin-top: 3dvh;
+  margin-top: 3.45svh;
   width: 15rem;
   padding: 0.8rem;
   cursor: pointer;
@@ -141,7 +141,7 @@ header {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 5dvh;
+  margin-bottom: 5.75svh;
   padding: 1rem;
 }
 
@@ -323,7 +323,7 @@ header {
     ;
   column-gap: 2.5rem;
   row-gap: 1.5rem;
-  padding: 3dvh;
+  padding: 3.45svh;
   .social-icons {
     justify-self: baseline;
   }
@@ -401,7 +401,7 @@ header {
 
 .headshot {
   border-radius: 0em 2em 0em 2em;
-  max-width: 30dvw;
+  max-width: 34.5svw;
 }
 
 .fatcolorfultext {
@@ -440,7 +440,7 @@ header {
 
 
 .blog {
-  margin-top: 7dvh;
+  margin-top: 8.05svh;
   text-wrap: balance;
 
   .container {
@@ -465,7 +465,7 @@ header {
     & img {
       object-fit: cover;
       width: 100%;
-      height: 25dvh;
+      height: 28.75svh;
 
       display: block;
       /* no whitespace */
@@ -476,7 +476,7 @@ header {
     & .textframe {
       padding: 2rem;
       & p:first-child {
-        margin-bottom: 5dvh;
+        margin-bottom: 5.75svh;
       }
     }
 
@@ -507,7 +507,7 @@ header {
       font-size: var(--font-size-l);
     }
     & .titleframe {
-      margin-bottom: 2dvh;
+      margin-bottom: 2.3svh;
 
     }
     & p {
@@ -598,13 +598,13 @@ header {
 
     object-fit: cover;
     width: 100%;
-    height: 70dvh;
+    height: 80.5svh;
 
     display: block;
     /* no whitespace */
   }
   & .imageframe {
-    padding: 5dvw;
+    padding: 5.75svw;
   }
 
   @media(max-width: 800px) {
@@ -616,14 +616,14 @@ header {
 
 
 .gallery {
-  padding-top: 5dvh;
+  padding-top: 5.75svh;
   padding: 3rem;
   background-color: var(--text-color);
   display: flex;
   justify-content: center;
   
   flex-direction: column;
-  row-gap: 2dvh;
+  row-gap: 2.3svh;
   text-transform: uppercase;
 
   & h2 {
@@ -667,7 +667,7 @@ header {
 }
 
 .contact-form {
-  margin-top: 5dvh;
+  margin-top: 5.75svh;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -692,15 +692,15 @@ header {
       width: 100%;
     }
     & .large {
-      height: 20dvh;
+      height: 23svh;
     }
 
   }
 }
 
 footer {
-  margin-top: 5dvh;
-  padding-bottom: 2dvh;
+  margin-top: 5.75svh;
+  padding-bottom: 2.3svh;
   display: flex;
   align-content: center;
   justify-content: center;
